--- a/Homework1.Rmd
+++ b/Homework1.Rmd
@@ -59,7 +59,7 @@ colSums(is.na(Auto)) # It seems that we have no missing values.
 tibble::glimpse(Auto)
 ```
 
-In the `Auto` data set, `mpg` is a quantitative variable but it is typically the response, not a predictor. The quantitative predictors are therefore `cylinders`, `displacement`, `horsepower`, `weight`, `acceleration`, and `year`. The qualitative predictors are `origin` (a categorical variable encoded numerically) and `name`.
+In the `Auto` data set, `mpg` is a quantitative variable but it is typically the response, not a predictor. The quantitative predictors are therefore `cylinders`, `displacement`, `horsepower`, `weight`, `acceleration`, and `year`. The qualitative predictors are `origin` (a categorical variable encoded numerically) and potentially `name` (more on `name` in part (e)).
 
 ### Problem 2 (b)
 
@@ -122,9 +122,12 @@ GGally::ggpairs(
   aes(color = origin, alpha = 0.5)
 )
 rm(Auto_plot)
+
+# Count number of unique names.
+sum(table(Auto$name) == 1)
 ```
 
-The scatterplot matrix shows strong collinearity among the “size/power” predictors: `cylinders`, `displacement`, `horsepower`, and `weight` move together very tightly (e.g., `cylinders`-`displacement` has a correlation around 0.95, and `displacement`-`weight` around 0.93), suggesting these variables are largely measuring the same underlying concept (bigger engines/cars tend to be heavier and more powerful). In contrast, `acceleration` tends to be negatively associated with those size/power variables (most notably with `horsepower`, around -0.69, and with `displacement`, around -0.54), indicating that cars with larger engines and greater power/weight tend to have smaller `acceleration` values in this dataset. The variable `year` is moderately negatively related to the size/power measures (roughly -0.31 to -0.42 with `weight`, `displacement`, and `horsepower`) and mildly positively related to `acceleration` (about 0.29), consistent with cars becoming lighter and less “big-engine” over time. Finally, the color-group patterns by `origin` suggest systematic differences across regions (U.S. cars clustering at higher weight/displacement/horsepower), and the within-`origin` correlations sometimes differ (e.g., the `cylinders`-`acceleration` relationship is much stronger for U.S. cars than for European or Japanese cars), reinforcing that relationships among predictors can vary by subgroup even when the overall trend is clear.
+The scatterplot matrix shows strong collinearity among the “size/power” predictors: `cylinders`, `displacement`, `horsepower`, and `weight` move together very tightly (e.g., `cylinders`-`displacement` has a correlation around 0.95, and `displacement`-`weight` around 0.93), suggesting these variables are largely measuring the same underlying concept (bigger engines/cars tend to be heavier and more powerful). In contrast, `acceleration` tends to be negatively associated with those size/power variables (most notably with `horsepower`, around -0.69, and with `displacement`, around -0.54), indicating that cars with larger engines and greater power/weight tend to have smaller `acceleration` values in this dataset. The variable `year` is moderately negatively related to the size/power measures (roughly -0.31 to -0.42 with `weight`, `displacement`, and `horsepower`) and mildly positively related to `acceleration` (about 0.29), consistent with cars becoming lighter and less “big-engine” over time. Finally, the color-group patterns by `origin` suggest systematic differences across regions (U.S. cars clustering at higher weight/displacement/horsepower), and the within-`origin` correlations sometimes differ (e.g., the `cylinders`-`acceleration` relationship is much stronger for U.S. cars than for European or Japanese cars), reinforcing that relationships among predictors can vary by subgroup even when the overall trend is clear. The `name` variable has an extremely large number of unique values (close to the number of observations), so it behaves mostly like an identifier rather than a reusable predictor. Treating it as a categorical feature would create a very high-cardinality factor with many rare levels, which tends to overfit and won’t generalize well.
 
 ### Problem 2 (f)
 
@@ -143,7 +146,7 @@ data(Boston)
 dim(Boston)
 ```
 
-There are 506 rows and 13 columns in the `Boston` data set. Each row corresponds to a census tract in the Boston area, and each column is a variable recorded for that tract. One of the columns is `medv`, the median home value (in \$1000s), and the remaining columns are predictors describing characteristics of the tract (e.g., crime rate, number of rooms, property tax rate, etc.).
+There are 506 rows and 13 columns in the `Boston` data set. Each row corresponds to a census tract/suburb (help file says suburb; textbook says census tract) in the Boston area, and each column is a variable recorded for that tract. One of the columns is `medv`, the median home value (in \$1000s), and the remaining columns are predictors describing characteristics of the tract (e.g., crime rate, number of rooms, property tax rate, etc.).
 
 ### Problem 3 (b)
 
@@ -165,30 +168,22 @@ Many predictors are highly skewed, especially `crim`, `zn`, `rad`, and `tax`, wi
 
 ### Problem 3 (c)
 
-Yes, several predictors appear associated with the per-capita crime rate `crim`, and the relationships are fairly systematic in the scatterplot matrix. `crim` tends to be higher in tracts with more industrial/urban characteristics: it increases with `rad` and `tax` (areas with greater highway accessibility and higher tax rates), and it is also positively associated with `indus`, `nox`, `ptratio`, and `lstat` (more non-retail business activity, higher pollution, higher pupil–teacher ratios, and a higher percent “lower status” population). In contrast, `crim` tends to be lower in tracts that look more suburban or higher-value: it decreases as `dis` increases (farther from employment centers), and it is negatively related to `zn`, and `rm` (more large-lot zoning and more rooms per dwelling).
+Because `crim` is extremely right-skewed, the scatterplots look compressed and many relationships appear weak visually. Still, the correlation panel indicates moderate associations: `crim` is most positively related to `rad` and `tax` (and also `lstat`, `nox`, and `indus`), and it is moderately negatively related to `dis`. Other predictors (e.g., `zn`, `rm`) show weaker negative associations. Overall, the evidence suggests some predictors are associated with crime rate, but the relationships are not uniformly strong and are influenced by skew/outliers.
 
 ### Problem 3 (d)
 
 ```{r 3d}
-# List tracts with highest crime rates.
-Boston_id <- Boston %>% 
-  dplyr::mutate(tract = dplyr::row_number())
-Boston_id %>% 
-    dplyr::arrange(dplyr::desc(crim)) %>% 
-    dplyr::slice(1:5) %>%
-    dplyr::select(tract, crim, tax, ptratio, medv)
-
-# List tracts with highest tax rates.
-Boston_id %>% 
-    dplyr::arrange(dplyr::desc(tax)) %>% 
-    dplyr::slice(1:5) %>%
-    dplyr::select(tract, tax, crim, ptratio, medv)
-
-# List tracts with highest pupil-teacher ratios.
-Boston_id %>% 
-    dplyr::arrange(dplyr::desc(ptratio)) %>% 
-    dplyr::slice(1:5) %>%
-    dplyr::select(tract, ptratio, crim, tax, medv)
+# Count top 5 values of variable.
+top5_value_counts <- function(df, var) {
+  df %>%
+    count(Value = .data[[var]], name = 'num_tracts') %>%  # frequency table
+    arrange(desc(Value)) %>%                              # highest values first
+    slice(1:5) %>%                                        # top 5 distinct values
+    mutate(Variable = var, .before = 1)
+}
+top5_value_counts(Boston, 'crim')
+top5_value_counts(Boston, 'tax')
+top5_value_counts(Boston, 'ptratio')
 
 # Compute ranges.
 ranges <- sapply(Boston %>% dplyr::select(crim, tax, ptratio), range)
@@ -198,10 +193,10 @@ tibble::tibble(
   Max      = ranges[2, ],
   Range    = Max - Min
 )
-rm(ranges)
+rm(ranges, top5_value_counts)
 ```
 
-Yes, there are several census tracts that stand out as having particularly high values of the requested predictors. For crime rate, a small set of tracts have extremely large `crim` values (up to about 89), far above the bulk of observations (minimum about 0.006), indicating clear outliers and a very wide range (roughly 89). For tax rates, there are tracts with `tax` as high as 711 (minimum 187), giving a large range of 524, and the highest-tax tracts are clearly separated from most towns. For pupil–teacher ratio, the maximum is 22.0 and the minimum is 12.6, so the range (9.4) is much narrower than for `crim` or `tax`; although some tracts do have notably high `ptratio`, the spread is comparatively modest. Overall, the ranges show that `crim` and `tax` vary dramatically across tracts (with especially extreme high values), while `ptratio` varies less.
+For `crim`, yes, there are a handful of tracts with extremely high crime rates. The five largest observed `crim` values are approximately 88.98, 73.53, 67.92, 51.14, and 45.75, and each of these occurs only once (so they are isolated extreme outliers). In contrast, the minimum `crim` is about 0.006, so the range is enormous (roughly 89), indicating that crime varies dramatically across tracts and is dominated by a few very high-crime locations. For `tax`, there are also tracts with particularly high values, but the pattern is different: the maximum `tax` rate is 711 and it occurs in 5 tracts, while the next-highest value 666 occurs in a very large number of tracts (132). This indicates that high `tax` rates are not just isolated outliers; there are sizeable clusters of tracts at very high `tax` levels. The overall range is still large (711 down to 187, range 524), reflecting substantial variation across towns/tracts. For `ptratio`, the highest pupil-teacher ratio is 22.0 (2 tracts), and other top values like 21.2 (15 tracts) and 21.0 (27 tracts) occur for many tracts, so "high" pupil–teacher ratios are fairly common compared to the extreme crime values. However, the spread is much smaller overall: `ptratio` ranges from 12.6 to 22.0 (range 9.4), which is narrow relative to `crim` and `tax`. Overall, `crim` and `tax` show much more dramatic variability (with `crim` having a few extreme outliers and `tax` having large high-value clusters), whereas `ptratio` varies less and its high values are shared by many tracts.
 
 ### Problem 3 (e)
 
@@ -221,6 +216,8 @@ median(Boston$ptratio, na.rm = TRUE)
 
 ```{r 3g}
 # Identify tract(s) with lowest medv.
+Boston_id <- Boston %>% 
+  dplyr::mutate(tract = dplyr::row_number())
 min_medv_tracts <- Boston_id %>% dplyr::slice_min(medv, n = 1, with_ties = TRUE)
 min_medv_tracts
 
@@ -246,7 +243,7 @@ make_comp_tbl(406, Boston_id, pred_names, ranges)
 rm(min_medv_tracts, make_comp_tbl, tract_ids, pred_names, ranges)
 ```
 
-The lowest median home value `medv` occurs in two census tracts, 399 and 406, both with `medv = 5` (in \$1000s). For tract 399, several predictors are at or near extreme values relative to their overall ranges: `age = 100` equals the dataset maximum, `rad = 24` equals the maximum, `tax = 666` is near the upper end of the interval $[187, 711]$, `nox = 0.693` is high relative to $[0.385, 0.871]$, and `dis ≈ 1.49` is close to the minimum within $[1.13, 12.1]$. It also has unfavorable socioeconomic/urban indicators: `lstat ≈ 30.6` is high within $[1.73, 38.0]$, and `crim ≈ 38.4` is extremely high within $[0.00632, 89.0]$. Tract 406 shows a very similar pattern: `age = 100`, `rad = 24`, `tax = 666`, `nox = 0.693`, and `dis ≈ 1.43` are again near the extremes, while its `crim ≈ 67.9` is even higher than tract 399’s, and `lstat ≈ 23.0` is still elevated within $[1.73, 38.0]$. Overall, these two tracts combine high crime, high taxes, high pollution/industrial indicators, very old housing, and proximity to the urban core (low `dis`), which is consistent with them having the lowest median home values in the data.
+The lowest median home value `medv` occurs in two census tracts, 399 and 406, both with `medv = 5` (in \$1000s). Both tracts share a very similar high-stress urban profile, which helps explain why their home values are so low. In both tracts, the housing stock is as old as it gets in this dataset (`age = 100`, the maximum), they are very close to the city/employment core (`dis ≈ 1.43–1.49`, near the minimum), and they sit in a heavily urban/industrial environment (`indus = 18.1` and `nox = 0.693`, both high). They also have the maximum highway accessibility (`rad = 24`, the dataset maximum) and very high property tax (`tax = 666`, near the top of the range), consistent with the strong `rad`-`tax` relationship seen elsewhere in the dataset. Where the two tracts differ most is the severity of crime and socioeconomic stress. Tract 399 has `crim = 38.35` together with an extremely high `lstat = 30.59` (near the upper end of the dataset), while tract 406 has even more extreme crime (`crim = 67.92`, among the very highest values) with still-elevated `lstat = 22.98`. In addition, both tracts have relatively low numbers of rooms per dwelling (`rm = 5.45` and `rm = 5.68`), suggesting smaller/less valuable housing compared with higher-`medv` areas.
 
 ### Problem 3 (h)
 
@@ -265,4 +262,4 @@ Boston_id %>%
 rm(Boston_id)
 ```
 
-In this data set, 64 census tracts have an average of more than 7 rooms per dwelling (`rm > 7`), and 13 tracts have an average of more than 8 rooms per dwelling (`rm > 8`). The `rm > 8` tracts are relatively rare and generally look like higher-end neighborhoods comparing with the summary of each predictors we saw in the previous problem part: many have very high median home values (`medv` is often near the top of the scale, including several at 50), low `lstat` values (roughly in the 2-7 range here), and typically low-to-moderate crime rates compared with the extreme-crime tracts seen elsewhere in the data. One notable exception is tract 365, which has `rm = 8.78` but also relatively high `crim` and high `nox`, showing that a tract can have very large houses while still having some urban disamenities. Overall, tracts with more than eight rooms per dwelling tend to correspond to especially desirable areas with high home values and favorable socioeconomic indicators.
+In this data set, 64 census tracts have an average of more than 7 rooms per dwelling (`rm > 7`), and 13 census tracts have an average of more than 8 rooms per dwelling (`rm > 8`). The `rm > 8` tracts are relatively rare and, based on the printed rows and contrasting with the roughly estimated ranges deduced from the pair plots in part (b), generally resemble higher-end neighborhoods: many have very high median home values (`medv` is frequently near the top of the scale, including several tracts with `medv = 50`), and their `lstat` values tend to be low (roughly 2–7), which is consistent with more affluent areas. Crime rates for these tracts are typically low to moderate (most `crim` values are well below the extreme outliers seen elsewhere in the dataset), though there is at least one clear exception: tract 365 has the largest `rm` value (`rm = 8.78`) but also relatively high `crim` and very high `nox`, showing that very large homes can coexist with some urban disamenities. Overall, tracts with `rm > 8` tend to correspond to especially desirable areas with high home values and favorable socioeconomic indicators, with a small number of exceptions.
